--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,5 +1,6 @@
 <h2>Put Your Options Here</h2>
-<select>
+<form method="POST" action="/results">
+<select name="category">
 <!--   <option value="Restaurants">Restaurant</option>
   <option value="Fast food">Fast food</option>
   <option value="Board games">Board games</option>
@@ -10,7 +11,6 @@
 </select>
 <br>
 <br>
-<form method="POST" action="/results">
 <input type="text" name="option1" value="Option 1">
 <br>
 <input type="text" name="option2" value="Option 2">
@@ -24,9 +24,11 @@
 <input type="submit" value="Decide">
 <br>
 <br>
+</form>
 <!-- <h3>Why don't you try:</h3> -->
-<h3>Add a suggestion for this category</h3>
-<input type="text" name="suggestion" value="New Suggestion">
+<form method="POST" action="/">
+<h3>Add a new category</h3>
+<input type="text" name="suggestion" value="New Category">
 <br>
 <input type="submit" value="Submit">
 </form>
