--- a/app/views/results.erb
+++ b/app/views/results.erb
@@ -2,4 +2,4 @@
 
 <h2><%=@item%></h2>
 
-<h2> <%="You could also #{@end_suggestion.name}." %> </h2>
+<h2> <%="You could also try #{@end_suggestion.name}." %> </h2>
